<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sentrysoftware</groupId>
		<artifactId>oss-parent</artifactId>
		<version>2</version>
	</parent>

	<groupId>org.sentrysoftware.maven</groupId>
	<artifactId>maven-skin-tools</artifactId>
	<version>1.4.00-SNAPSHOT</version>

	<name>Sentry Maven Skin Tools</name>
	<description>Tools and utilities used in Sentry's Maven Skin. It is based on the excellent Maven
		Reflow Skin developed by Andrius Velykis (http://andriusvelykis.github.io/reflow-maven-skin/).
		However, because Reflow is no longer maintained, we had to fork the projet and go with our own!
	</description>

	<organization>
		<name>Sentry Software</name>
		<url>https://sentrysoftware.com</url>
	</organization>

	<url>https://sentrysoftware.github.io/maven-skin-tools</url>
	<inceptionYear>2017</inceptionYear>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/sentrysoftware/maven-skin-tools/issues/</url>
	</issueManagement>

	<scm>
		<connection>scm:git:https://github.com/sentrysoftware/maven-skin-tools.git</connection>
		<url>https://github.com/sentrysoftware/maven-skin-tools</url>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<name>Bertrand Martin (@bertysentry)</name>
			<email>bertrand@sentrysoftware.com</email>
			<roles>
				<role>Project founder</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<!-- Java 11 -->
		<maven.compiler.release>11</maven.compiler.release>

		<!-- Reproducible Build -->
		<!-- See https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
		<project.build.outputTimestamp>2023-12-29T14:06:50Z</project.build.outputTimestamp>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.11.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.velocity.tools</groupId>
			<artifactId>velocity-tools-generic</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.18.1</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.js</groupId>
			<artifactId>js</artifactId>
			<version>23.0.8</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.js</groupId>
			<artifactId>js-scriptengine</artifactId>
			<version>24.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.sejda.imageio</groupId>
			<artifactId>webp-imageio</artifactId>
			<version>0.1.6</version>
		</dependency>
	</dependencies>

	<build>

		<!-- Actual build plugins -->
		<plugins>

			<!-- https://issues.apache.org/jira/browse/DOXIASITETOOLS-168 tools.xml has to be at
			META-INF/maven/site-tools.xml -->
			<plugin>
				<groupId>com.coderplus.maven.plugins</groupId>
				<artifactId>copy-rename-maven-plugin</artifactId>
				<version>1.0.1</version>
				<executions>
					<execution>
						<id>copy-tools-xml</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<sourceFile>${project.basedir}/src/main/resources/tools.xml</sourceFile>
							<destinationFile>${project.build.outputDirectory}/META-INF/maven/site-tools.xml</destinationFile>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>